my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_subdevice/ESYNTAX_subdevice.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ESYNTAX_subdevice.dml:12:1: error ESYNTAX: syntax error at 'subdevice'
